# edtech

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  BACKEND_PLAN.md  Dockerfile  FRONTEND_API_INTEGRATION.md  RAZORPAY_COMPLETE_IMPLEMENTATION.md  RAZORPAY_INTEGRATION_GUIDE.md  RAZORPAY_QUICK_REFERENCE.md  README.md  Requirement Gathering YES Doubt-Resolution Platform.txt  demo_student.html  demo_teacher.html  docker-compose.jitsi.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0ab1dccf4126_create_all_tables.py  595a173363f0_add_lowercase_open_to_session_status_.py  5b141d05f1b8_add_open_to_session_status_enum.py  8c3f2b9d1e77_add_payment_transaction_and_event_tables.py  c9e2a4d7b1f3_seed_cs_subject_master_list.py  d7a1c4e9f230_add_withdrawal_payout_fields.py  eedd1b26b1f8_add_room_name_to_session.py  f5baeaa2ba39_add_group_session_support.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  availability.py  enrollment.py  notification.py  payment.py  rating.py  session.py  subject.py  teacher.py  user.py  wallet.py
app/repositories/: availability_repo.py  enrollment_repo.py  payment_repo.py  rating_repo.py  search_repo.py  session_repo.py  subject_repo.py  (+3 more)
frontend/: DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: post-start.ps1  post-start.sh
tests/: conftest.py  test_api.py  test_frontend_integration.py  test_group_sessions.py  test_health.py  test_meeting_smoke.py  test_section4_search_browser.py  test_section5_sessions_browser.py
(+109 files in other folders)
